--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -16,9 +16,9 @@
             <span class="font-semibold text-xl tracking-tight">OmaPSOAS</span>
         </div>
         <div class="block lg:hidden">
-            <button class="flex items-center px-3 py-2 border rounded text-psoas-green border-psoas-green hover:text-psoas-green-hover hover:border-white">
+            <a href="index.html" class="flex items-center px-3 py-2 border rounded text-psoas-green border-psoas-green hover:text-psoas-green-hover hover:border-white">
                 <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
-            </button>
+            </a>
         </div>
         <div class="w-full block flex-grow lg:flex lg:items-center hidden lg:w-auto">
             <div class="text-sm lg:flex-grow">
